--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.16",
     "tailwindcss": "^4.1.16",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
