--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "chart.js": "^4.5.1",
+    "firebase": "^12.5.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.7.1",
     "tailwindcss": "^4.1.16",
